caspar (20040531-1) unstable; urgency=low

  * New upstream.  Beware: change in user interface, see
    /usr/share/doc/caspar/NEWS.gz

 -- Joost van Baal <joostvb-caspar-deb-15@mdcc.cx>  Mon, 31 May 2004 17:52:48 +0200

caspar (20030825-1) unstable; urgency=low

  * New upstream.

 -- Joost van Baal <joostvb-caspar-deb-15@mdcc.cx>  Mon, 25 Aug 2003 13:42:59 +0200

caspar (20030809-1) unstable; urgency=low

  * New upstream.
  * doc-base.caspar, doc-base.caspar-typesetting: added, upstream
    documentation is now more fancy.

 -- Joost van Baal <joostvb-caspar-deb-15@mdcc.cx>  Sat, 09 Aug 2003 17:24:28 +0200

caspar (20030718-1) unstable; urgency=low

  * New upstream.

 -- Joost van Baal <joostvb-caspar-deb-15@mdcc.cx>  Wed, 23 Jul 2003 14:04:44 +0200

caspar (20030716-1) unstable; urgency=low

  * New upstream.

 -- Joost van Baal <joostvb-caspar-deb-15@mdcc.cx>  Wed, 16 Jul 2003 12:03:23 +0200

caspar (20030313-1) unstable; urgency=low

  * New upstream.
  * control: suggests docbook-dsssl, needed for PostScript output.

 -- Joost van Baal <joostvb-caspar-deb-15@mdcc.cx>  Mon, 31 Mar 2003 22:47:13 +0200

caspar (20030203-1) unstable; urgency=low

  * New upstream.

 -- Joost van Baal <joostvb-caspar-deb-15@mdcc.cx>  Mon, 03 Feb 2003 16:38:57 +0100

caspar (20020331-1) unstable; urgency=low

  * Initial Release.

 -- Joost van Baal <joostvb-caspar-deb-15@mdcc.cx>  Tue,  2 Apr 2002 11:37:19 +0200
