@@ -10,7 +10,7 @@ Architecture: all
 Depends: make
 Suggests: jade, jadetex, tetex-bin, w3m, gs-common, psutils, lpr, postscript-viewer, man-db, docbook-dsssl, caspar-doc
 Description: Makefile snippets for common tasks
- Caspar offers Makefile snippets for common tasks, like installing system
+ Caspar offers Makefile snippets for tasks like installing system
  configuration files you maintain using CVS, or typesetting LaTeX, DocBook
  XML and DocBook SGML documents.  You'll need at least jade, jadetex and
  tetex-bin from the suggested packages if you want to do any typesetting.
@@ -26,4 +26,4 @@ Description: documentation for caspar
  Caspar offers Makefile snippets for common tasks, like installing system
  configuration files or typesetting documentation.
  .
- This is documentation for caspar.
+ This is the caspar manpages and other documentation.
