@@ -1,6 +1,6 @@
 #!/usr/bin/make -f
 
-# $Id: rules,v 1.2 2003-08-09 15:24:48 joostvb Exp $
+# $Id: rules,v 1.3 2004-05-31 16:31:18 joostvb Exp $
 
 # Based upon sample debian/rules that uses debhelper.
 # GNU copyright 1997 to 1999 by Joey Hess.
@@ -10,6 +10,9 @@
 
 # This is the debhelper compatibility version to use.
 export DH_COMPAT=3
+
+# allow bashism's in commandlines
+SHELL = /bin/bash
 
 # These are used for cross-compiling and for saving the configure script
 # from having to guess our platform (since we know it already)
@@ -63,6 +66,7 @@ install: build
 
 	# commands to install the package into debian/caspar.
 	$(MAKE) install prefix=$(CURDIR)/debian/caspar/usr
+
 	# fix symlinks (they now point to absolute files in build system)
 	rm $(CURDIR)/debian/caspar/usr/include/caspar/mk/*.mk
 	ln -s ../../../share/caspar/mk/caspar.mk \
@@ -71,6 +75,19 @@ install: build
           $(CURDIR)/debian/caspar/usr/include/caspar/mk/docbook.mk
 	ln -s ../../../share/caspar/mk/pod.mk \
           $(CURDIR)/debian/caspar/usr/include/caspar/mk/pod.mk
+
+	# clean up unneeded docs
+	rm $(CURDIR)/debian/caspar/usr/share/doc/caspar/caspar*.azm
+	rm $(CURDIR)/debian/caspar/usr/share/man/man7/caspar*.7
+
+	# process caspar-doc.install
+	dh_install --sourcedir=debian/caspar
+	dh_installdocs
+
+	# clean up files copied to caspar-doc
+	rm $(CURDIR)/debian/caspar/usr/share/doc/caspar/{AUTHORS,THANKS,README,TODO,NEWS}
+	rm $(CURDIR)/debian/caspar/usr/share/doc/caspar/caspar-typesetting.{ps,html,txt}
+	rm $(CURDIR)/debian/caspar/usr/share/doc/caspar/caspar.{ps,html,txt}
 
 	# get rid of COPYING (we use the debian/copyright file)
 	rm $(CURDIR)/debian/caspar/usr/share/doc/caspar/COPYING
@@ -81,7 +98,6 @@ install: build
 binary-indep: build install
 	dh_testdir
 	dh_testroot
-	dh_installdocs
 	dh_installman
 	dh_installchangelogs ChangeLog
 	dh_link
